Fix corrupted GUI
Exception in thread AWT-EventQueue-0 java.lang.IllegalAccessError: class javax.media.jai.RasterAccessor cannot access class sun.awt.image.BytePackedRaster (in module java.desktop) because module java.desktop does not export sun.awt.image to unnamed module